Changed img location

--- a/Micro.html
+++ b/Micro.html
@@ -75,7 +75,7 @@
     <div class="wrap noDisplay">
         <aside class="boxi rounded-4 container-fluid" style="background-color: #ffffff;">
             <div style="width: 100%;">
-                <img src="Snapshoot Portfolio 01.png" alt="" width="100%" height="100%" class="p-3"
+                <img src="/Img/Snapshoot Portfolio 01.png" alt="" width="100%" height="100%" class="p-3"
                     style="width: 100%;">
             </div>
             <div class="p-3" style="width: 100%;">
@@ -126,7 +126,7 @@
                     project</button>
             </div>
             <div style="width: 100%;">
-                <img src="Snapshoot Portfolio2.png" alt="" width="100%" height="100%" class="">
+                <img src="/Img/Snapshoot Portfolio.png" alt="" width="100%" height="100%" class="">
             </div>
         </aside>
     </div>
@@ -134,7 +134,7 @@
     <div class="wrap noDisplay">
         <aside class="boxi rounded-4 container-fluid" style="background-color: #ffffff;">
             <div style="width: 100%;">
-                <img src="Snapshoot Portfolio3.png" alt="" width="100%" height="100%" class="p-3" style="width: 100%;">
+                <img src="/Img/Snapshoot Portfolio3.png" alt="" width="100%" height="100%" class="p-3" style="width: 100%;">
             </div>
             <div class="p-3" style="width: 100%;">
                 <h1 class="fw-bold fs-40">Facebook 360</h1>
@@ -164,7 +164,7 @@
     <div class="wrap yesDisplay">
         <aside class="boxi rounded-4 container-fluid" style="background-color: #ffffff;">
             <div style="width: 100%;">
-                <img src="Snapshoot Portfolio3.png" alt="" width="100%" height="100%" class="p-3" style="width: 100%;">
+                <img src="/Img/Snapshoot Portfolio3.png" alt="" width="100%" height="100%" class="p-3" style="width: 100%;">
             </div>
             <div class="p-3" style="width: 100%;">
                 <h1 class="fw-bold fs-40">Tonic</h1>
@@ -192,7 +192,7 @@
     <div class="wrap yesDisplay">
         <aside class="boxi rounded-4 container-fluid" style="background-color: #ffffff;">
             <div style="width: 100%;">
-                <img src="Snapshoot Portfolio.png" alt="" width="100%" height="100%" class="p-3" style="width: 100%;">
+                <img src="./Img/Snapshoot Portfolio.png" alt="" width="100%" height="100%" class="p-3" style="width: 100%;">
             </div>
             <div class="p-3" style="width: 100%;">
                 <h1 class="fw-bold">Multi-Post</h1>
@@ -220,7 +220,7 @@
     <div class="wrap yesDisplay">
         <aside class="boxi rounded-4 container-fluid" style="background-color: #ffffff;">
             <div style="width: 100%;">
-                <img src="Snapshoot Portfolio 8.png" alt="" width="100%" height="100%" class="p-3" style="width: 100%;">
+                <img src="./Img/Snapshoot Portfolio 8.png" alt="" width="100%" height="100%" class="p-3" style="width: 100%;">
             </div>
             <div class="p-3" style="width: 100%;">
                 <h1 class="fw-bold">Multi-Post</h1>
@@ -248,7 +248,7 @@
     <div class="wrap yesDisplay">
         <aside class="boxi rounded-4 container-fluid" style="background-color: #ffffff;">
             <div style="width: 100%;">
-                <img src="Snapshoot Portfolio2.png" alt="" width="100%" height="100%" class="p-3" style="width: 100%;">
+                <img src="./Img/Snapshoot Portfolio2.png" alt="" width="100%" height="100%" class="p-3" style="width: 100%;">
             </div>
             <div class="p-3" style="width: 100%;">
                 <h1 class="fw-bold">Multi-Post</h1>
@@ -286,7 +286,7 @@
                                 Dev</span> <i class='bx bxs-circle'></i> <span class="text-secondary">2015</p>
                     </div>
                     <div style="width: 100%;">
-                        <img src="Snapshoot Portfolio 01.png" alt="" width="100%" height="100%" class="p-3"
+                        <img src="./Img/Snapshoot Portfolio 01.png" alt="" width="100%" height="100%" class="p-3"
                             style="width: 100%;">
                     </div>
                     <div class="d-flex m-1">
@@ -351,7 +351,7 @@
                     project</button>
             </div>
             <div style="width: 100%;">
-                <img src="Snapshoot Portfolio.png" alt="" width="100%" height="100%" class="">
+                <img src="./Img/Snapshoot Portfolio.png" alt="" width="100%" height="100%" class="">
             </div>
         </aside>
     </div>
