completed languages picture

--- a/index.html
+++ b/index.html
@@ -394,15 +394,15 @@
                             <div class="card card-body border-0">
                                 <aside style="gap: 20px; width: 80%;" class="d-flex">
                                     <div class="p-2 flates">
-                                        <img src="javasc!pt.png" alt="" class="p-2">
+                                        <img src="./Img/javasc!pt.png" alt="" class="p-2">
                                         <p class="p-2 fs-5" style="color: #253858;">Javascript</p>
                                     </div>
                                     <div class="p-2 flates">
-                                        <img src="htm!.png" alt="" class="p-2">
+                                        <img src="./Img/htm!.png" alt="" class="p-2">
                                         <p class="p-2 fs-5" style="color: #253858;">HTML</p>
                                     </div>
                                     <div class="p-2 flates">
-                                        <img src="css!.png" alt="" class="p-2">
+                                        <img src="./Img/css!.png" alt="" class="p-2">
                                         <p class="p-2 fs-5" style="color: #253858;">CSS</p>
                                     </div>
                                 </aside>
