--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     project</button>
             </div>
             <div style="width: 100%;">
-                <img src="/Img/Snapshoot Portfolio.png" alt="" width="100%" height="100%" class="">
+                <img src="/Img/Snapshoot Portfolio2.png" alt="" width="100%" height="100%" class="">
             </div>
         </aside>
     </div>
