--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="Micro.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
+
 <body>
     <div class="content">
         <nav class="navbar navbar-expand-lg py-2">
@@ -43,26 +45,30 @@
             </div>
         </nav>
         <!-- page content start here -->
-        <div class="contentb">
+        <div class="contentb noDisplay">
             <div class="open container-fluid p-4">
                 <div class="open2">
                     <div class="Alexa">
-                        <h1 class="fw-bold">I'm Alexandra. <br><span>Glad to see you!</span></h1>
+                        <h1 class="fw-bold">I'm Akinola Victor. <br><span>Glad to see you!</span></h1>
                         <h6>
                             I'm a software developer! I can help you build a product, feature, or website. Look through
                             some
                             of my work and experience! If you like what you see and have a project you need coded, don't
                             hesitate to contact me.
                         </h6>
-                       
+
                         <div class="py-4">
                             <h6 class="text-primary">LET'S CONNECT</h6>
-                            <a href="#"><i class='bx bxl-twitter text-secondary fs-2'></i></a>
-                            <a href="#"><i class='bx bxl-linkedin text-secondary fs-2'></i></a>
-                            <a href="#"><i class='bx bxl-gmail text-secondary fs-2'></i></a>
-                            <a href="#"><i class='bx bxl-github text-secondary fs-2'></i></a>
-                            <a href="#" style="position: relative; bottom: 8px;"><img src="angellist.svg" alt=""
-                                    height="auto" width="auto"></a>
+                            <a href="https://x.com/prime_victor1?s=21&t=Z1QhoYzPavAh5Tqb3mWWtQ"><i
+                                    class='bx bxl-twitter text-secondary fs-2'></i></a>
+                            <a href="https://www.linkedin.com/in/victor-akinola-27a33b320/"><i
+                                    class='bx bxl-linkedin text-secondary fs-2'></i></a>
+                            <a href="mailto:timivictor565@gmail.com"><i
+                                    class='bx bxl-gmail text-secondary fs-2'></i></a>
+                            <a href="https://github.com/Alphaboy20023"><i
+                                    class='bx bxl-github text-secondary fs-2'></i></a>
+                            <a href="#" style="position: relative; bottom: 8px;" class="fs-4"><img
+                                    src="/Img/angellist.svg" alt="" height="28px" width="28px"></a>
                         </div>
                     </div>
                 </div>
@@ -117,7 +123,6 @@
                 </h5>
                 <section class="sect">
                     <span class=" cond fw-semibold">html</span>
-                    <span class=" cond fw-semibold">Ruby on rails</span>
                     <span class=" cond fw-semibold">css</span>
                     <span class=" cond fw-semibold">javascript</span>
                 </section>
@@ -134,7 +139,8 @@
     <div class="wrap noDisplay">
         <aside class="boxi rounded-4 container-fluid" style="background-color: #ffffff;">
             <div style="width: 100%;">
-                <img src="/Img/Snapshoot Portfolio3.png" alt="" width="100%" height="100%" class="p-3" style="width: 100%;">
+                <img src="/Img/Snapshoot Portfolio3.png" alt="" width="100%" height="100%" class="p-3"
+                    style="width: 100%;">
             </div>
             <div class="p-3" style="width: 100%;">
                 <h1 class="fw-bold fs-40">Facebook 360</h1>
@@ -161,10 +167,11 @@
     </div>
 
     <!--Mobile screen1-->
-    <div class="wrap yesDisplay">
-        <aside class="boxi rounded-4 container-fluid" style="background-color: #ffffff;">
+    <div class="wraps yesDisplay">
+        <aside class="boxi mobile rounded-4 container-fluid" style="background-color: #ffffff;">
             <div style="width: 100%;">
-                <img src="/Img/Snapshoot Portfolio3.png" alt="" width="100%" height="100%" class="p-3" style="width: 100%;">
+                <img src="/Img/Snapshoot Portfolio3.png" alt="" width="100%" height="100%" class="p-3"
+                    style="width: 100%;">
             </div>
             <div class="p-3" style="width: 100%;">
                 <h1 class="fw-bold fs-40">Tonic</h1>
@@ -175,12 +182,11 @@
                 <h5 style="color: #344563;" class="fs-4">
                     A daily selection of privately personalized reads; no accounts or sign-ups required.
                 </h5>
-                <section class="box4">
+                <section class="box4" style="flex-wrap: wrap;">
                     <span class=" conol fw-semibold">html</span>
                     <span class=" conol fw-semibold">css</span>
                     <span class=" conol fw-semibold">javascript</span>
                 </section>
-                <br>
                 <button type="button" class="butns m-3" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
                     See project
                 </button>
@@ -189,16 +195,18 @@
     </div>
 
     <!--Mobile screen2-->
-    <div class="wrap yesDisplay">
-        <aside class="boxi rounded-4 container-fluid" style="background-color: #ffffff;">
+    <div class="wraps yesDisplay">
+        <aside class="boxi mobile rounded-4 container-fluid" style="background-color: #ffffff;">
             <div style="width: 100%;">
-                <img src="./Img/Snapshoot Portfolio.png" alt="" width="100%" height="100%" class="p-3" style="width: 100%;">
+                <img src="./Img/Snapshoot Portfolio.png" alt="" width="100%" height="100%" class="p-3"
+                    style="width: 100%;">
             </div>
             <div class="p-3" style="width: 100%;">
                 <h1 class="fw-bold">Multi-Post</h1>
                 <h1 class="fw-bold">Stories</h1>
                 <div style="width: 80%;" class="fs-7">
-                    <p class="fs-6">CANOPY <i class='bx bxs-circle'> </i><span class="text-secondary fs-6"> Back End Dev </span><i class='bx bxs-circle'></i><span class="text-secondary">2015</p>
+                    <p class="fs-6">CANOPY <i class='bx bxs-circle'> </i><span class="text-secondary fs-6"> Back End Dev
+                        </span><i class='bx bxs-circle'></i><span class="text-secondary">2015</p>
                 </div>
                 <h5 style="color: #344563;" class="fs-4">
                     A daily selection of privately personalized reads; no accounts or sign-ups required.
@@ -208,25 +216,25 @@
                     <span class=" conol fw-semibold">css</span>
                     <span class=" conol fw-semibold">javascript</span>
                 </section>
-                <br>
                 <button type="button" class="butns m-3" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
                     See project
                 </button>
             </div>
         </aside>
     </div>
-
     <!--Mobile Screen 3-->
-    <div class="wrap yesDisplay">
-        <aside class="boxi rounded-4 container-fluid" style="background-color: #ffffff;">
+    <div class="wraps yesDisplay">
+        <aside class="boxi mobile rounded-4 container-fluid" style="background-color: #ffffff;">
             <div style="width: 100%;">
-                <img src="./Img/Snapshoot Portfolio 8.png" alt="" width="100%" height="100%" class="p-3" style="width: 100%;">
+                <img src="./Img/Snapshoot Portfolio 8.png" alt="" width="100%" height="100%" class="p-3"
+                    style="width: 100%;">
             </div>
             <div class="p-3" style="width: 100%;">
                 <h1 class="fw-bold">Multi-Post</h1>
                 <h1 class="fw-bold">Stories</h1>
                 <div style="width: 80%;" class="fs-7">
-                    <p class="fs-6">CANOPY <i class='bx bxs-circle'> </i><span class="text-secondary fs-6"> Back End Dev </span><i class='bx bxs-circle'></i><span class="text-secondary">2015</p>
+                    <p class="fs-6">CANOPY <i class='bx bxs-circle'> </i><span class="text-secondary fs-6"> Back End Dev
+                        </span><i class='bx bxs-circle'></i><span class="text-secondary">2015</p>
                 </div>
                 <h5 style="color: #344563;" class="fs-4">
                     A daily selection of privately personalized reads; no accounts or sign-ups required.
@@ -236,25 +244,25 @@
                     <span class=" conol fw-semibold">css</span>
                     <span class=" conol fw-semibold">javascript</span>
                 </section>
-                <br>
                 <button type="button" class="butns m-3" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
                     See project
                 </button>
             </div>
         </aside>
     </div>
-
     <!--Mobile screen4-->
-    <div class="wrap yesDisplay">
-        <aside class="boxi rounded-4 container-fluid" style="background-color: #ffffff;">
+    <div class="wraps yesDisplay">
+        <aside class="boxi  mobile rounded-4 container-fluid" style="background-color: #ffffff;">
             <div style="width: 100%;">
-                <img src="./Img/Snapshoot Portfolio2.png" alt="" width="100%" height="100%" class="p-3" style="width: 100%;">
+                <img src="./Img/Snapshoot Portfolio2.png" alt="" width="100%" height="100%" class="p-3"
+                    style="width: 100%;">
             </div>
             <div class="p-3" style="width: 100%;">
                 <h1 class="fw-bold">Multi-Post</h1>
                 <h1 class="fw-bold">Stories</h1>
                 <div style="width: 80%;" class="fs-7">
-                    <p class="fs-6">CANOPY <i class='bx bxs-circle'> </i><span class="text-secondary fs-6"> Back End Dev </span><i class='bx bxs-circle'></i><span class="text-secondary">2015</p>
+                    <p class="fs-6">CANOPY <i class='bx bxs-circle'> </i><span class="text-secondary fs-6"> Back End Dev
+                        </span><i class='bx bxs-circle'></i><span class="text-secondary">2015</p>
                 </div>
                 <h5 style="color: #344563;" class="fs-4">
                     A daily selection of privately personalized reads; no accounts or sign-ups required.
@@ -264,7 +272,6 @@
                     <span class=" conol fw-semibold">css</span>
                     <span class=" conol fw-semibold">javascript</span>
                 </section>
-                <br>
                 <button type="button" class="butns m-3" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
                     See project
                 </button>
@@ -311,7 +318,7 @@
                             <span class=" cond fw-semibold p-1">css</span>
                             <span class=" cond fw-semibold p-1">Javascript</span>
                             <div class="box">
-                                <span class=" cond fw-semibold p-1">Ruby</span>
+                                <!-- <span class=" cond fw-semibold p-1">Ruby</span> -->
                                 <span class=" cond fw-semibold p-1">Bootstrap</span>
                             </div>
                             <div class="box3 border-top m-2">
@@ -358,9 +365,9 @@
 
     <!--Desktop and Mobile screen-->
     <div style="background-color: #ffffff;" class="boxil2">
-        <div class="d-flex boxil" style="background-color: #ffffff;">
-            <aside class="boxil px-3">
-                <div class="p-3" style="width: 100%;">
+        <div class="d-flex boxil">
+            <aside class="boxil px-2">
+                <div class="p-2" style="width: 100%;">
                     <h1 class="fw-bold fs-40"> About Myself </h1>
                     <h5 style="color: #344563;" class="fs-4">
                         Hello I'm a software developer! I can help you build a product , feature or website Look through
@@ -370,27 +377,30 @@
                     </h5>
                     <p class="text-primary">LET'S CONNECT</p>
                     <div class="p-3">
-                        <a href="#"><i class='bx bxl-twitter text-secondary fs-2'></i></a>
-                        <a href="#"><i class='bx bxl-linkedin text-secondary fs-2'></i></a>
-                        <a href="#"><i class='bx bxl-gmail text-secondary fs-2'></i></a>
-                        <a href="#"><i class='bx bxl-github text-secondary fs-2'></i></a>
-                        <a href="#" style="position: relative; bottom: 8px;"><img src="angellist.svg" alt=""
-                                height="auto" width="auto"></a>
+                        <a href="https://x.com/prime_victor1?s=21&t=Z1QhoYzPavAh5Tqb3mWWtQ"><i
+                                class='bx bxl-twitter text-secondary fs-2'></i></a>
+                        <a href="https://www.linkedin.com/in/victor-akinola-27a33b320/"><i
+                                class='bx bxl-linkedin text-secondary fs-2'></i></a>
+                        <a href="mailto:timivictor565@gmail.com"><i class='bx bxl-gmail text-secondary fs-2'></i></a>
+                        <a href="https://github.com/Alphaboy20023"><i class='bx bxl-github text-secondary fs-2'></i></a>
+                        <a href="#" style="position: relative; bottom: 8px;" class="fs-4"><img src="/Img/angellist.svg"
+                                alt="" height="28px" width="28px"></a>
                     </div>
                     <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal"
                         data-bs-target="#staticBackdrop">Get my Resume</button>
                 </div>
                 <div style="width: 100%;">
-                    <!--Collapse-->
+
+                    <!--Collapse Start-->
                     <div>
-                        <div class=" d-flex justify-content-between p-2 btn border-0 " btn border-0 type="button"
-                            data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false"
-                            aria-controls="collapseExample" type="button" style="flex-wrap: nowrap;">
+                        <div class=" d-flex justify-content-between p-2 btn border-0 " type="button"
+                            data-bs-toggle="collapse" data-bs-target="#collapseExample1" aria-expanded="false"
+                            aria-controls="collapseExample1" style="flex-wrap: nowrap;">
                             <p>Languages</p>
                             <i class='bx bx-chevron-down'></i>
                         </div>
                         </p>
-                        <div class="collapse" id="collapseExample">
+                        <div class="collapse" id="collapseExample1">
                             <div class="card card-body border-0">
                                 <aside style="gap: 20px; width: 80%;" class="d-flex">
                                     <div class="p-2 flates">
@@ -420,8 +430,8 @@
                                 </div>
                             </div>
                         </div>
-                        <!--Collapse End-->
                     </div>
+                    <!--Collapse End-->
                     <div>
                         <aside style="gap: 20px; width: 80%;" class="d-flex">
                             <div class="p-2 flates">
@@ -438,9 +448,23 @@
                             </div>
                         </aside>
                         <div class="my-3 py-3">
-                            <div class=" d-flex justify-content-between border-bottom btn border-0" type="button">
-                                <p>FrameWorks</p>
-                                <i class='bx bx-chevron-right'></i>
+                            <div>
+                                <div class=" d-flex btn justify-content-between border-bottom p-2 border-0"
+                                    type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample2"
+                                    aria-expanded="false" aria-controls="collapseExample2" type="button"
+                                    style="flex-wrap: nowrap;">
+                                    <p>FrameWorks</p>
+                                    <i class='bx bx-chevron-right'></i>
+                                </div>
+                                <div class="collapse" id="collapseExample2">
+                                    <div class="card card-body d-flex border-0" style="width: auto; height: auto; background-color: rgb(155, 152, 152);">
+                                            <div class=" text-light fw-semibold fs-5">
+                                                <p >Bootstrap</p>
+                                                <!-- <p>Bootstrap</p>  -->
+                                                <!-- <p>bootstrap</p> -->
+                                            </div>
+                                    </div>
+                                </div>
                             </div>
                             <div class=" d-flex justify-content-between border-bottom btn border-0 my-3" type="button">
                                 <p>Skills</p>
@@ -470,7 +494,8 @@
                         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
                             placeholder="Write your text here"></textarea>
                     </div>
-                    <button type="button" class="button fw-semibold">Get In Touch</button>
+                    <button type="button" class="button fw-semibold"><a href="mailto:timivictor565@gmail.com"
+                            style="text-decoration: none;">Get In Touch</a></button>
                 </div>
 
             </div>
