--- a/index.html
+++ b/index.html
@@ -74,6 +74,36 @@
                 </div>
             </div>
         </div>
+        <!--Mobile content after nav-->
+        <div class="contentb yesDisplay">
+            <div class="opens container-fluid p-2">
+                <div class="open2">
+                    <div class="Alexa">
+                        <h1 class="fw-bold">I Am Akinola Victor. <br> <span>Glad to see you!</span></h1>
+                        <h6>
+                            I'm a software developer! I can help you build a product, feature, or website. Look through
+                            some
+                            of my work and experience! If you like what you see and have a project you need coded, don't
+                            hesitate to contact me.
+                        </h6>
+
+                        <div class="py-4">
+                            <h6 class="text-primary">LET'S CONNECT</h6>
+                            <a href="https://x.com/prime_victor1?s=21&t=Z1QhoYzPavAh5Tqb3mWWtQ"><i
+                                    class='bx bxl-twitter text-secondary fs-2'></i></a>
+                            <a href="https://www.linkedin.com/in/victor-akinola-27a33b320/"><i
+                                    class='bx bxl-linkedin text-secondary fs-2'></i></a>
+                            <a href="mailto:timivictor565@gmail.com"><i
+                                    class='bx bxl-gmail text-secondary fs-2'></i></a>
+                            <a href="https://github.com/Alphaboy20023"><i
+                                    class='bx bxl-github text-secondary fs-2'></i></a>
+                            <a href="#" style="position: relative; bottom: 8px;" class="fs-4"><img
+                                    src="/Img/angellist.svg" alt="" height="25px" width="25px"></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     </section>
     </div>
@@ -457,12 +487,13 @@
                                     <i class='bx bx-chevron-right'></i>
                                 </div>
                                 <div class="collapse" id="collapseExample2">
-                                    <div class="card card-body d-flex border-0" style="width: auto; height: auto; background-color: rgb(155, 152, 152);">
-                                            <div class=" text-light fw-semibold fs-5">
-                                                <p >Bootstrap</p>
-                                                <!-- <p>Bootstrap</p>  -->
-                                                <!-- <p>bootstrap</p> -->
-                                            </div>
+                                    <div class="card card-body d-flex border-0"
+                                        style="width: auto; height: auto; background-color: rgb(155, 152, 152);">
+                                        <div class=" text-light fw-semibold fs-5">
+                                            <p>Bootstrap</p>
+                                            <!-- <p>Bootstrap</p>  -->
+                                            <!-- <p>bootstrap</p> -->
+                                        </div>
                                     </div>
                                 </div>
                             </div>
