removed unnecessary mobile content

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                             <a href="https://github.com/Alphaboy20023"><i
                                     class='bx bxl-github text-secondary fs-2'></i></a>
                             <a href="#" style="position: relative; bottom: 8px;" class="fs-4"><img
-                                    src="/Img/angellist.svg" alt="" height="25px" width="25px"></a>
+                                    src="/Img/angellist.svg" alt="" height="25px" width="25     px"></a>
                         </div>
                     </div>
                 </div>
@@ -462,7 +462,7 @@
                         </div>
                     </div>
                     <!--Collapse End-->
-                    <div>
+                    <div class="yesDisplay">
                         <aside style="gap: 20px; width: 80%;" class="d-flex">
                             <div class="p-2 flates">
                                 <img src="./Img/javasc!pt.png" alt="" class="p-2">
