--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
                         </div>
                     </div>
                     <!--Collapse End-->
-                    <div class="yesDisplay">
+                    <div class="noDisplay">
                         <aside style="gap: 20px; width: 80%;" class="d-flex">
                             <div class="p-2 flates">
                                 <img src="./Img/javasc!pt.png" alt="" class="p-2">
