--- a/index.html
+++ b/index.html
@@ -462,8 +462,8 @@
                         </div>
                     </div>
                     <!--Collapse End-->
-                    <div class="noDisplay">
-                        <aside style="gap: 20px; width: 80%;" class="d-flex">
+                    <div class="">
+                        <aside style="gap: 20px; width: 80%;" class="d-flex noDisplay">
                             <div class="p-2 flates">
                                 <img src="./Img/javasc!pt.png" alt="" class="p-2">
                                 <p class="p-2 fs-5" style="color: #253858;">Javascript</p>
