--- a/index.html
+++ b/index.html
@@ -463,20 +463,22 @@
                     </div>
                     <!--Collapse End-->
                     <div class="">
-                        <aside style="gap: 20px; width: 80%;" class="d-flex noDisplay">
-                            <div class="p-2 flates">
-                                <img src="./Img/javasc!pt.png" alt="" class="p-2">
-                                <p class="p-2 fs-5" style="color: #253858;">Javascript</p>
-                            </div>
-                            <div class="p-2 flates">
-                                <img src="./Img/htm!.png" alt="" class="p-2">
-                                <p class="p-2 fs-5" style="color: #253858;">HTML</p>
-                            </div>
-                            <div class="p-2 flates">
-                                <img src="./Img/css!.png" alt="" class="p-2">
-                                <p class="p-2 fs-5" style="color: #253858;">CSS</p>
-                            </div>
-                        </aside>
+                        <section class="noDisplay">
+                            <aside style="gap: 20px; width: 80%;" class="d-flex">
+                                <div class="p-2 flates">
+                                    <img src="./Img/javasc!pt.png" alt="" class="p-2">
+                                    <p class="p-2 fs-5" style="color: #253858;">Javascript</p>
+                                </div>
+                                <div class="p-2 flates">
+                                    <img src="./Img/htm!.png" alt="" class="p-2">
+                                    <p class="p-2 fs-5" style="color: #253858;">HTML</p>
+                                </div>
+                                <div class="p-2 flates">
+                                    <img src="./Img/css!.png" alt="" class="p-2">
+                                    <p class="p-2 fs-5" style="color: #253858;">CSS</p>
+                                </div>
+                            </aside>
+                        </section>
                         <div class="my-3 py-3">
                             <div>
                                 <div class=" d-flex btn justify-content-between border-bottom p-2 border-0"
